--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,4 +83,17 @@ a {
   margin-right: 5px;
 }
 
+input, textarea {
+  width: 500px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  font-size: 18px;
+  border: 1px solid #dee7ec;
+}
+
+.contact-submit {
+  background-color: #dee7ec;
+  color: #889eab;
+}
 
